--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -21,6 +21,7 @@
 
 <div class="product-container" id="product-list">
   {{#each products}}
+  {{#if this._id}}
     <div class="product-card" id="product-{{this.id}}">
       <img src="{{this.thumbnail}}" class="product-image" alt="Producto">
       <div class="product-details">
@@ -29,7 +30,18 @@
         <p class="product-price">Precio: ${{this.price}}</p>
       </div>
     </div>
+    {{/if}}
   {{/each}}
 </div>
+</div>
+<div class="nextandprev">
+  {{#if hasPrevPage}}
+     <a href="?page={{prevPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button>ANTERIOR</button></a>
+
+  {{/if}}
+  {{#if hasNextPage}}
+  <a href="?page={{nextPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button>SIGUIENTE</button></a>
+  {{/if}}
+  </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/product.js"></script>
