--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,45 +1,37 @@
-<h2>Lista de Productos</h2>
 
-<style>
-  .product-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+ <header>
+      <nav class="navbar navbar-light bg-dark min-vw-100">
+        <img src="/img/logo-2019.png" width="300px">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white fw-bold cart"  href="/api/carts/65b1382cab83dedd9755ccd4">
+              <i class="bi bi-cart mx-5" id="carritoContenedor">0</i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    
+  
+   
+    
 
-  .product-card {
-    box-sizing: border-box;
-    width: 20%;
-    margin-right: 5%; /* Espacio entre elementos */
-    margin-bottom: 20px; /* Espacio entre filas */
-  }
-
-  .product-image {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .nextandprev{
-    align-items: center;
-  }
-</style>
-
-<div class="product-container">
+<div class="product-container" id="product-list">
+  <h2 id="cartId" style="display: none">{{cartId}}</h2>
   {{#each products}}
   {{#if this._id}}
-    <div class="product-card">
-      <img src="{{this.thumbnail}}" class="product-image" alt="Producto">
-      <div class="product-details">
-        <h5 class="product-title">{{this.title}}</h5>
-        <p class="product-description">{{this.description}}</p>
-        <p class="product-price">Precio: ${{this.price}}</p>
-       
-      </div>
+   <div class="card mt-3 mx-2" style="width: 18rem;">
+      <img class="card-img-top mt-2 img-info" id="product-image-${producto.id}" onclick="location.href='/api/products/details/{{this._id}}'" src="{{this.thumbnail}}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title" id="text">{{this.title}}</h5>
+          <p class="card-text" id="text">Precio: ${{this.price}}</p>
+          <p class="card-text" id="text">En Stock: {{this.stock}}</p>
+         
+        </div>
     </div>
     {{/if}}
-    
   {{/each}}
-
-
+</div>
 </div>
 <div class="nextandprev">
   {{#if hasPrevPage}}
