--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -28,7 +28,7 @@
     </thead>
     <tbody>
       {{#each products}}
-        <tr style="text-align: center;">
+        <tr style="text-align: center;" id="product-{{this._id}}">
           <td><img class="img-carrito" src="{{this.thumbnail}}" /></td>
           <td>{{this.title}}</td>
           <td>${{this.price}}</td>
@@ -42,6 +42,7 @@
             >-</button>
 
             <p
+              id="quantity-{{this._id}}"
               style="display: inline-block; margin: 0 10px;"
             >{{this.quantity}}</p>
 
@@ -66,10 +67,10 @@
   </table>
 </div>
 <a href="/api/products" class="btn btn-primary">Ir a Producto</a>
+<script src="/socket.io/socket.io.js"></script>
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
   crossorigin="anonymous"
 ></script>
 <script src="/js/cart.js"></script>
-<script src="/socket.io/socket.io.js"></script>
