--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -16,7 +16,7 @@
    
     
 
-<div class="product-container" id="product-list">
+<div class="product-container" id="product-list" style="margin-left:auto; margin-right:auto">
   <h2 id="cartId" style="display: none">{{cartId}}</h2>
   {{#each products}}
   {{#if this._id}}
