--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -5,8 +5,7 @@
       <li class="nav-item">
         <a
           class="nav-link text-white fw-bold cart"
-          data-bs-toggle="modal"
-          data-bs-target="#modal"
+          href="/api/carts/65b1382cab83dedd9755ccd4"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">0</i>
         </a>
