--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,38 +1,58 @@
 <header>
   <nav class="navbar navbar-light bg-dark min-vw-100">
-    <img src="/img/logo-2019.png" width="300px" />
+    <a href="/api/products">
+      <img src="/img/logo-2019.png" width="300px" />
+    </a>
+    <div class="welcome-message text-white">
+      Bienvenido/a, {{first_name}} {{last_name}}
+    </div>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a
           class="nav-link text-white fw-bold cart"
           href="/api/carts/65b1382cab83dedd9755ccd4"
         >
-          <i class="bi bi-cart mx-5" id="carritoContenedor">0</i>
+          <i class="bi bi-cart mx-5" id="carritoContenedor">
+            0
+          </i>
         </a>
+      </li>
+      <li class="nav-item">
+        <button
+          class="btn btn-outline-light btn-sm"
+          id="logoutButton"
+          onclick="location.href='/api/auth/logout'"
+        >
+          Cerrar Sesión
+        </button>
       </li>
     </ul>
   </nav>
 </header>
 
 <div class="container mt-5" style="background-color: aliceblue;">
-
   <div class="row">
-
     <div class="col-md-6">
       <img src="{{thumbnail}}" class="img-fluid" alt="Producto" />
     </div>
 
     <div class="col-md-6">
-      <h1 class="h2 mb-3">{{title}}</h1>
+      <h1 class="h2 mb-3">
+        {{title}}
+      </h1>
 
       <p>
         {{description}}
       </p>
 
       <div class="d-flex mb-3">
-        <p class="product__price lead mr-4">${{price}}</p>
+        <p class="product__price lead mr-4">
+          ${{price}}
+        </p>
 
-        <p class="badge badge-secondary product__sku">Codigo: {{_id}}</p>
+        <p class="badge badge-secondary product__sku">
+          Codigo: {{_id}}
+        </p>
       </div>
 
       <p class="mb-4">
@@ -46,13 +66,14 @@
         class="btn btn-primary mr-2"
         id="{{_id}}"
         onclick="addProductToView('{{_id}}')"
-      >Add to cart</button>
-
+      >
+        Add to cart
+      </button>
     </div>
-
   </div>
   <a href="/api/products" class="btn btn-primary" style="">
-    Back</a>
+    Back
+  </a>
 </div>
 
 <!-- Bootstrap JS -->
