--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -24,6 +24,13 @@
           Cerrar Sesión
         </button>
       </li>
+       <li> <button
+          class="btn btn-outline-light btn-sm"
+          id="user-admin"
+          onclick="location.href='/api/users/list'"
+        >
+          Mantenedor de usuarios
+        </button></li>
     </ul>
   </nav>
 </header>
