--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,10 +9,10 @@
       <li class="nav-item">
         <a
           class="nav-link text-white fw-bold cart"
-          href="/api/carts/65b1382cab83dedd9755ccd4"
+          href="/api/carts/{{cartId}}"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
-            0
+           {{totalProducts}}
           </i>
         </a>
       </li>
