--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -5,6 +5,7 @@
     </a>
     <div class="welcome-message text-white">
       Bienvenido/a, {{first_name}} {{last_name}}
+    
     </div>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -13,7 +14,7 @@
           href="/api/carts/65b1382cab83dedd9755ccd4"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
-            0
+            {{totalQuantity}}
           </i>
         </a>
       </li>
@@ -70,7 +71,7 @@
               style="display: inline-block; margin-left: 10px;"
               class="btn btn-danger ml-2"
               type="button"
-              onclick="deleteOneProduct('{{this._id}}')"
+              onclick="deleteOneProduct('{{this._id}}','{{../cartId}}')"
             >
               -
             </button>
@@ -86,7 +87,7 @@
               style="display: inline-block; margin-right: 10px;"
               class="btn btn-primary mr-2"
               id="{{this._id}}"
-              onclick="addProductFromFront('{{this._id}}')"
+              onclick="addProductFromFront('{{this._id}}','{{../cartId}}')"
             >
               +
             </button>
@@ -94,7 +95,7 @@
           <td>
             <button
               class="btn btn-danger"
-              onclick="deleteProduct('{{this._id}}')"
+              onclick="deleteProduct('{{this._id}}','{{../cartId}}')"
             >
               Eliminar
             </button>
