--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -34,6 +34,14 @@
               />
             </div>
             <div class="form-group">
+    <label for="dobInput">Fecha de nacimiento</label>
+    <input
+      type="date"
+      class="form-control"
+      id="dobInput"
+      name="age"
+    />
+            <div class="form-group">
               <label for="emailInput">Correo electrónico</label>
               <input
                 type="email"
