--- a/src/views/user-detail.handlebars
+++ b/src/views/user-detail.handlebars
@@ -9,16 +9,7 @@
      
     </div>
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a
-          class="nav-link text-white fw-bold cart"
-          href="/api/carts/{{cartId}}"
-        >
-          <i class="bi bi-cart mx-5" id="carritoContenedor">
-            {{totalProducts}}
-          </i>
-        </a>
-      </li>
+      
       <li class="nav-item">
         <button
           class="btn btn-outline-light btn-sm"
@@ -43,51 +34,28 @@
   </nav>
 </header>
 
-<div class="container mt-5" style="background-color: aliceblue;">
-  <div class="row">
-    <div class="col-md-6">
-      <img src="{{thumbnail}}" class="img-fluid" alt="Producto" />
-    </div>
-
-    <div class="col-md-6">
-      <h1 class="h2 mb-3">
-        {{title}}
-      </h1>
-
-      <p>
-        {{description}}
-      </p>
-
-      <div class="d-flex mb-3">
-        <p class="product__price lead mr-4">
-          ${{price}}
-        </p>
-
-        <p class="badge badge-secondary product__sku">
-          Codigo: {{_id}}
-        </p>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title">Perfil de Usuario</h5>
+          </div>
+          <div class="card-body">
+            <div class="text-center">
+              <img src="/img/default-user.png" alt="Imagen de Perfil" class="card-img-top rounded-circle img-fluid mb-3">
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><strong>Nombre:</strong> {{first_name}} {{last_name}}</li>
+              <li class="list-group-item"><strong>Correo:</strong> {{email}}</li>
+              <li class="list-group-item"><strong>Edad:</strong> {{age}}</li>
+              <li class="list-group-item"><strong>Rol:</strong> {{role}}</li>
+            </ul>
+          </div>
+        </div>
       </div>
-
-      <p class="mb-4">
-        <i class="fas fa-warehouse"></i>
-        En stock:
-        {{stock}}
-      </p>
-
-      <button
-        style="display: inline-block; margin-right: 10px;"
-        class="btn btn-primary mr-2"
-        id="{{_id}}"
-        onclick="addProductToView('{{_id}}', '{{cartId}}')"
-      >
-        Add to cart
-      </button>
     </div>
   </div>
-  <a href="/api/products" class="btn btn-primary" style="">
-    Back
-  </a>
-</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script
