--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -7,14 +7,14 @@
       Bienvenido/a, {{first_name}} {{last_name}}
     
     </div>
-    <ul class="navbar-nav">
+<ul class="navbar-nav">
       <li class="nav-item">
         <a
           class="nav-link text-white fw-bold cart"
-          href="/api/carts/65b1382cab83dedd9755ccd4"
+          href="/api/carts/{{cartId}}"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
-            {{totalQuantity}}
+           {{totalQuantity}}
           </i>
         </a>
       </li>
@@ -27,6 +27,24 @@
           Cerrar Sesión
         </button>
       </li>
+       <li> {{#if adminValidation}}<button
+          class="btn btn-outline-light btn-sm"
+          id="user-admin"
+          
+  onclick="location.href='/api/users/list'">Mantenedor de usuarios</button>
+  {{else}}
+  <button
+          class="btn btn-outline-light btn-sm"
+          id="chatButton"
+          onclick="location.href='/api/chat'"
+        >
+          CHAT
+        </button>
+{{/if}} 
+        
+          
+        </li>
+       <li><button class="btn btn-outline-light btn-sm" onclick="location.href='/api/users/current'">Perfil</button></li>
     </ul>
   </nav>
 </header>
@@ -107,6 +125,9 @@
 </div>
 <a href="/api/products" class="btn btn-primary">
   Ir a Producto
+</a>
+<a href="/api/carts/{{cartId}}/purchase" class="btn btn-primary">
+  COMPRAR
 </a>
 <script src="/socket.io/socket.io.js"></script>
 <script
