--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -5,8 +5,7 @@
     </a>
     <div class="welcome-message text-white">
       Bienvenido/a, {{first_name}} {{last_name}}<br>
-      Role: {{role}}<br>
-     
+      Role: {{role}}
     </div>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -15,7 +14,7 @@
           href="/api/carts/{{cartId}}"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
-            {{totalProducts}}
+           {{totalProducts}}
           </i>
         </a>
       </li>
@@ -28,17 +27,24 @@
           Cerrar Sesión
         </button>
       </li>
-       <li> <button
+       <li> {{#if adminValidation}}<button
           class="btn btn-outline-light btn-sm"
           id="user-admin"
-          {{#if adminValidation}}
-  onclick="location.href='/api/users/list'"
+          
+  onclick="location.href='/api/users/list'">Mantenedor de usuarios</button>
   {{else}}
-  style="display: none;"
-{{/if}} 
+  <button
+          class="btn btn-outline-light btn-sm"
+          id="chatButton"
+          onclick="location.href='/api/chat'"
         >
-          Mantenedor de usuarios
-        </button></li>
+          CHAT
+        </button>
+{{/if}} 
+        
+          
+        </li>
+       <li><button class="btn btn-outline-light btn-sm" onclick="location.href='/api/users/current'">Perfil</button></li>
     </ul>
   </nav>
 </header>
@@ -73,13 +79,9 @@
         En stock:
         {{stock}}
       </p>
-
-      <button
-        style="display: inline-block; margin-right: 10px;"
-        class="btn btn-primary mr-2"
-        id="{{_id}}"
-        onclick="addProductToView('{{_id}}', '{{cartId}}')"
-      >
+  
+      <button  class="btn btn-primary mr-2" id="{{_id}}" {{#unless
+        adminValidation}} style="display: inline-block; margin-right: 10px;" onclick="addProductToView('{{_id}}', '{{cartId}}')" {{else}} style="display: none" {{/unless}}>
         Add to cart
       </button>
     </div>
