--- a/src/views/user-detail.handlebars
+++ b/src/views/user-detail.handlebars
@@ -1,15 +1,23 @@
 <header>
   <nav class="navbar navbar-light bg-dark min-vw-100">
-     <a href="/api/products">
+    <a href="/api/products">
       <img src="/img/logo-2019.png" width="300px" />
     </a>
     <div class="welcome-message text-white">
-      Bienvenido/a, {{first_name}} {{last_name}}<br>
-      Role: {{role}}<br>
-     
+      Bienvenido/a, {{first_name}} {{last_name}}<br />
+      Role: {{role}}
     </div>
     <ul class="navbar-nav">
-      
+      <li class="nav-item">
+        <a
+          class="nav-link text-white fw-bold cart"
+          href="/api/carts/{{cartId}}"
+        >
+          <i class="bi bi-cart mx-5" id="carritoContenedor">
+            {{totalProducts}}
+          </i>
+        </a>
+      </li>
       <li class="nav-item">
         <button
           class="btn btn-outline-light btn-sm"
@@ -19,43 +27,85 @@
           Cerrar Sesión
         </button>
       </li>
-       <li> <button
+      <li>
+        {{#if adminValidation}}
+          <button
+            class="btn btn-outline-light btn-sm"
+            id="user-admin"
+            onclick="location.href='/api/users/list'"
+          >
+            Mantenedor de usuarios
+          </button>
+        {{else}}
+          <button
+            class="btn btn-outline-light btn-sm"
+            id="chatButton"
+            onclick="location.href='/api/chat'"
+          >
+            CHAT
+          </button>
+        {{/if}}
+      </li>
+      <li>
+        <button
           class="btn btn-outline-light btn-sm"
-          id="user-admin"
-          {{#if adminValidation}}
-  onclick="location.href='/api/users/list'"
-  {{else}}
-  style="display: none;"
-{{/if}} 
+          onclick="location.href='/api/users/current'"
         >
-          Mantenedor de usuarios
-        </button></li>
+          Perfil
+        </button>
+      </li>
     </ul>
   </nav>
 </header>
 
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h5 class="card-title">Perfil de Usuario</h5>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="card-title">
+            Perfil de Usuario
+          </h5>
+        </div>
+        <div class="card-body">
+          <div class="text-center">
+            <img
+              src="/img/default-user.png"
+              alt="Imagen de Perfil"
+              class="card-img-top rounded-circle img-fluid mb-3"
+            />
           </div>
-          <div class="card-body">
-            <div class="text-center">
-              <img src="/img/default-user.png" alt="Imagen de Perfil" class="card-img-top rounded-circle img-fluid mb-3">
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item"><strong>Nombre:</strong> {{first_name}} {{last_name}}</li>
-              <li class="list-group-item"><strong>Correo:</strong> {{email}}</li>
-              <li class="list-group-item"><strong>Edad:</strong> {{age}}</li>
-              <li class="list-group-item"><strong>Rol:</strong> {{role}}</li>
-            </ul>
-          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <strong>
+                Nombre:
+              </strong>
+              {{userInfoDto.name}} {{userInfoDto.lastname}}
+            </li>
+            <li class="list-group-item">
+              <strong>
+                Correo:
+              </strong>
+              {{userInfoDto.email}}
+            </li>
+            <li class="list-group-item">
+              <strong>
+                Edad:
+              </strong>
+              {{userInfoDto.age}}
+            </li>
+            <li class="list-group-item">
+              <strong>
+                Rol:
+              </strong>
+              {{role}}
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script
