--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -84,11 +84,13 @@
         adminValidation}} style="display: inline-block; margin-right: 10px;" onclick="addProductToView('{{_id}}', '{{cartId}}')" {{else}} style="display: none" {{/unless}}>
         Add to cart
       </button>
+   
     </div>
-  </div>
-  <a href="/api/products" class="btn btn-primary" style="">
-    Back
+        <a href="/api/products" class="btn btn-primary  mx-auto col-1" >
+    volver
   </a>
+  </div>
+ 
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
