--- a/src/views/users-list.handlebars
+++ b/src/views/users-list.handlebars
@@ -4,7 +4,7 @@
       <img src="/img/logo-2019.png" width="300px" />
     </a>
     <div class="welcome-message text-white">
-      Bienvenido/a, {{first_name}} {{last_name}}
+      Bienvenido/a, {{userInfoDto.name}} {{userInfoDto.lastname}}
     </div>
     <ul class="navbar-nav">
       <li class="nav-item">
