--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -69,12 +69,12 @@
   {{/each}}
 </div>
 </div>
-<div class="nextandprev">
+<div class="nextandprev ">
   {{#if hasPrevPage}}
-     <a href="?page={{prevPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button>ANTERIOR</button></a>
+     <a class="text-center d-flex align-items-center" href="?page={{prevPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button class="btn btn-primary mx-auto">ANTERIOR</button></a>
 
   {{/if}}
   {{#if hasNextPage}}
-  <a href="?page={{nextPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button>SIGUIENTE</button></a>
+  <a class="text-center d-flex align-items-center" href="?page={{nextPage}}{{#if pLimit}}&limit={{pLimit}}{{/if}}{{#if pSort}}&sort={{pSort}}{{/if}}"><button class="btn btn-primary mx-auto">SIGUIENTE</button></a>
   {{/if}}
   </div>
