--- a/src/views/user-detail.handlebars
+++ b/src/views/user-detail.handlebars
@@ -4,14 +4,14 @@
       <img src="/img/logo-2019.png" width="300px" />
     </a>
     <div class="welcome-message text-white">
-      Bienvenido/a, {{first_name}} {{last_name}}<br />
-      Role: {{role}}
+      Bienvenido/a, {{userInfoDto.name}} {{userInfoDto.lastname}}<br />
+      Role: {{userInfoDto.role}}
     </div>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a
           class="nav-link text-white fw-bold cart"
-          href="/api/carts/{{cartId}}"
+          href="/api/carts/{{userInfoDto.cartId}}"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
             {{totalProducts}}
@@ -28,7 +28,7 @@
         </button>
       </li>
       <li>
-        {{#if adminValidation}}
+        {{#if userValidation}}
           <button
             class="btn btn-outline-light btn-sm"
             id="user-admin"
@@ -98,10 +98,19 @@
               <strong>
                 Rol:
               </strong>
-              {{role}}
+              {{userInfoDto.role}}
             </li>
           </ul>
         </div>
+       
+          <button {{#unless userValidation}}
+            class="btn btn-dark"
+            onclick="location.href='/api/users/purchaseHistory'" style="display:inline-block" {{else}} style="display:none" {{/unless}}
+          >
+            Historial de Compras
+          </button>
+         
+       
       </div>
     </div>
   </div>
