--- a/src/views/purchase-history.handlebars
+++ b/src/views/purchase-history.handlebars
@@ -14,7 +14,7 @@
           href="/api/carts/{{cartId}}"
         >
           <i class="bi bi-cart mx-5" id="carritoContenedor">
-            {{totalProducts}}
+            {{quantity}}
           </i>
         </a>
       </li>
